fix: style scrollbars to be more like mac-os non-intrusive

--- a/packages/dialect-react-ui/index.css
+++ b/packages/dialect-react-ui/index.css
@@ -140,7 +140,6 @@
   }
 }
 
-
 .dialect ::before,
 .dialect ::after {
   --tw-content: '';
@@ -470,6 +469,39 @@
   height: auto;
 }
 
+.dialect *::-webkit-scrollbar {
+  width: 12px; /* Mostly for vertical scrollbars */
+  height: 12px; /* Mostly for horizontal scrollbars */
+}
+.dialect *::-webkit-scrollbar-track {
+  /* Background */
+  background: transparent;
+}
+.dt-light-scrollbar {
+  /* Firefox: Foreground, Background */
+  scrollbar-color: rgba(0, 0, 0, 0.3) transparent;
+}
+.dt-light-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 9999px;
+  /* Foreground */
+  background: transparent;
+  /* hack to add visual margin to thumb https://stackoverflow.com/questions/29866759/how-do-i-add-a-margin-to-a-css-webkit-scrollbar */
+  box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.3);
+  border: solid 3px transparent;
+}
+.dt-dark-scrollbar {
+  /* Firefox: Foreground, Background */
+  scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
+}
+.dt-dark-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 9999px;
+  /* Foreground */
+  background: transparent;
+  /* hack to add visual margin to thumb https://stackoverflow.com/questions/29866759/how-do-i-add-a-margin-to-a-css-webkit-scrollbar */
+  box-shadow: inset 0 0 10px 10px rgba(255, 255, 255, 0.3);
+  border: solid 3px transparent;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .dt-no-scrollbar::-webkit-scrollbar {
   display: none;
@@ -477,8 +509,8 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .dt-no-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 @tailwind components;
